# deep-writer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.kiro/specs/: deepwriter-evaluation.md
.mcp/: config.json
docs/spores/: README.md
scripts/: cc-sdd
