[project]
name = "deep-writer"
version = "0.1.0"
description = "Evaluation scaffold for DeepWriter MCP — nkllon/deep-writer"
authors = [{ name = "Nkllon" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
